FIX: spacing on .md file

--- a/src/styles/blog/BlogPage.module.css
+++ b/src/styles/blog/BlogPage.module.css
@@ -42,4 +42,5 @@
     font-weight: 400;
     line-height: 32px; /* 200% */
     width: 70vw;
+    white-space: pre-line;
 }
